2001-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFormat.m: Fixed error in PAD() macro - it was failing to
	decrement a counter - and looping forever.
	Fixed error in formatted output of string arguments ... was
	crashing with range exception.

2001-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m: Added gnustep specific feature to run task in
	pseudo terminal.

2001-02-02  Richard Frith-Macdonald <rfm@gnu.org>

	Integrated patch for unicode support for ([-initWithFormat:]) by
	Kai Henningsen.  Modified to support efficient append with format
	to a unicode string.
	* configure.in: Test for data type used by GSFormat
	* Headers/gnustep/base/GSFormat.h: file declaring GSFormat info.
	* Source/GSFormat.m: Source for format support.
	* Source/NSString.m: Use GSFormat() to implement ([-initWithFormat:])
	* Source/GSString.m: use GSFormat() to implement ([-appendFormat:])

2001-01-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDate.m: pass dates over DO bycopy unless explicitly byref.
	* Source/NSTimeZone.m: pass time zones over DO bycopy unless
	explicitly byref.
	Use placeholder class for newly created objects - to improve
	eficiency of selection of classes in cluster.
	Updated to use MacOS-X initialisation methods.

2001-01-30  Michael Hanni  <mhanni@sprintmail.com>

	* Source/.cvsignore: tweaked to cover a few more items.
	* Makefile.postamble: distclean removes created file: base.make.
	* configure.in: patched to fix bug in libxml detection macro
	(reviewed by: Nicola Pero <nicola@brainstorm.co.uk>)
	* configure: Regenerated.

2001-01-30  Nicola Pero  <nicola@brainstorm.co.uk>

	* gnustep-base.script.spec.in: Fixed, tidied.
	* configure.in (CPPFLAGS): Added -I$GNUSTEP_HDIR so that custom
	libobjc headers are used - this should fix ffcall detection.
	* configure: Regenerated.
	
2001-01-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSDate.h: Partial support added for MacOS-X